force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/QCC_Recovery_DGCT_Request_Header__mdt.object-meta.xml
<CustomObject>
    <description>This setting holds the header level attributes that are sent with every Travel Voucher API request from Salesforce to DGCT (CDP2-259)</description>
    <label>QCC Recovery DGCT Request Header</label>
    <pluralLabel>QCC Recovery DGCT Request Headers</pluralLabel>
</CustomObject>