force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/fields/From_Name__c.field-meta.xml
<CustomField>
    <fullName>From_Name__c</fullName>
    <label>From Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>