force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/fields/Recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email__c</fullName>
    <label>Recipient Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>