force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/fields/Send_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Email__c</fullName>
    <label>Send to Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>