force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/fields/Voucher_Template__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Template__c</fullName>
    <label>Voucher Template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>