force-app/main/default/objects/QCC_Recovery_DGCT_Request_Header__mdt/fields/Voucher_Validity_in_months__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Validity_in_months__c</fullName>
    <label>Voucher Validity (in months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <default>true</default>
                <label>12</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>